<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    
    <PreferenceCategory 
        android:title="@string/pref_service_cat"
        >
    <CheckBoxPreference
        android:key="@string/pref_service_active_key"
        android:title="@string/pref_service_active_title"
        android:summaryOn="@string/pref_service_active_summOn"
        android:summaryOff="@string/pref_service_active_summOff"
        android:defaultValue="false"
        android:disableDependentsState="false"
        />
    </PreferenceCategory>
    
    
    <PreferenceCategory 
        android:title="@string/pref_delete_cat"
        >
        <EditTextPreference 
            android:key="@string/pref_key_target_folder"
            android:title="@string/pref_title_target_folder"
            android:summary="@string/pref_summ_target_folder"
            android:defaultValue="@string/pref_default_target_folder"
            android:disableDependentsState="@string/pref_default_target_folder"
            />
        <CheckBoxPreference
            android:key="@string/pref_key_use_recursive_delete"
            android:title="@string/pref_title_use_recursive_delete"
            android:summaryOn="@string/pref_summOn_use_recursive_delete"
            android:summaryOff="@string/pref_summOff_use_recursive_delete"
            android:defaultValue="false"
            android:dependency="@string/pref_key_target_folder"
            android:disableDependentsState="false"
            />
        <CheckBoxPreference 
            android:key="@string/pref_key_delete_folders"
            android:title="@string/pref_title_delete_folders"
            android:summaryOn="@string/pref_summOn_delete_folders"
            android:summaryOff="@string/pref_summOff_delete_folders"
            android:defaultValue="false"
            android:dependency="@string/pref_key_use_recursive_delete"
            />
        <CheckBoxPreference 
            android:key="@string/pref_notify_on_delete_key"
            android:title="@string/pref_notify_on_delete_title"
            android:summaryOn="@string/pref_notify_on_delete_summOn"
            android:summaryOff="@string/pref_notify_on_delete_summOff"
            android:defaultValue="false"
            />
    </PreferenceCategory>
    
    <PreferenceCategory 
        android:title="@string/pref_interval_cat"
        >
        <CheckBoxPreference 
            android:key="@string/pref_key_interval_type"
            android:title="@string/pref_title_interval_type"
            android:summaryOn="@string/pref_summOn_interval_type"
            android:summaryOff="@string/pref_summOff_interval_type"
            android:defaultValue="true"
            android:dependency="@string/pref_service_active_key"
            />
        <com.indivisible.clearmeout.preferences.TimePreference
            android:key="@string/pref_key_daily_at"
            android:title="@string/pref_title_daily_at"
            android:summary="@string/pref_summ_daily_at"
            android:defaultValue="@string/pref_default_daily_at"
            android:inputType="time"
            android:dependency="@string/pref_service_active_key"
            />
        <EditTextPreference
            android:key="@string/pref_key_periodic_at"
            android:title="@string/pref_title_periodic_at"
            android:summary="@string/pref_summ_periodic_at"
            android:inputType="number"
            android:defaultValue="@string/pref_default_periodic_at"
            android:dependency="@string/pref_service_active_key"
            />
        <CheckBoxPreference
            android:key="@string/pref_key_use_strict_alarms"
            android:title="@string/pref_title_use_strict_alarms"
            android:summaryOn="@string/pref_summOn_use_strict_alarms"
            android:summaryOff="@string/pref_summOff_use_strict_alarms"
            android:defaultValue="false"
            android:dependency="@string/pref_service_active_key"
            />
	</PreferenceCategory>
    
    <PreferenceCategory
        android:title="@string/pref_filters_cat"
        >
        <!--  filter by extension  -->
        <CheckBoxPreference 
            android:key="@string/pref_key_use_filter_extensions"
            android:title="@string/pref_title_use_filter_extensions"
            android:summaryOn="@string/pref_summOn_use_filter_extensions"
            android:summaryOff="@string/pref_summOff_use_filter_extensions"
            android:defaultValue="false"
            android:dependency="@string/pref_service_active_key"
            />
        <CheckBoxPreference
            android:key="@string/pref_key_delete_files_matching_extension"
            android:title="@string/pref_title_delete_files_matching_extension"
            android:summaryOn="@string/pref_summOn_delete_files_matching_extension"
            android:summaryOff="@string/pref_summOff_delete_files_matching_extension"
            android:defaultValue="true"
            android:dependency="@string/pref_key_use_filter_extensions"
            />
        <EditTextPreference 
            android:key="@string/pref_key_filter_extensions"
            android:title="@string/pref_title_filter_extensions"
            android:summary="@string/pref_summ_filter_extensions"
            android:defaultValue="@string/pref_default_filter_extensions"
            android:dependency="@string/pref_key_use_filter_extensions"
            />
        <!--  filter by pattern  -->
        <CheckBoxPreference 
            android:key="@string/pref_key_use_filter_pattern"
            android:title="@string/pref_title_use_filter_pattern"
            android:summaryOn="@string/pref_summOn_use_filter_pattern"
            android:summaryOff="@string/pref_summOff_use_filter_pattern"
            android:defaultValue="false"
            android:dependency="@string/pref_service_active_key"
            />
        <CheckBoxPreference
            android:key="@string/pref_key_delete_files_matching_pattern"
            android:title="@string/pref_title_delete_files_matching_pattern"
            android:summaryOn="@string/pref_summOn_delete_files_matching_pattern"
            android:summaryOff="@string/pref_summOff_delete_files_matching_pattern"
            android:defaultValue="false"
            android:dependency="@string/pref_key_use_filter_pattern"
            />
        <EditTextPreference 
            android:key="@string/pref_key_filter_pattern"
            android:title="@string/pref_title_filter_pattern"
            android:summary="@string/pref_summ_filter_pattern"
            android:defaultValue="@string/pref_default_filter_pattern"
            android:dependency="@string/pref_key_use_filter_pattern"
            />
    </PreferenceCategory>
    
</PreferenceScreen>